# NLP_EXS

./: .gitignore  pyproject.toml
EX01/: EX1_jonas_gstoettenmayr.html  EX1_jonas_gstoettenmayr.ipynb  scraped_data.json  webscraping_basics.ipynb
EX02/: EX2_jonas_gstoettenmayr.html  EX2_jonas_gstoettenmayr.ipynb
EX03/: EX3_jonas_gstoettenmayr.html  EX3_jonas_gstoettenmayr.ipynb
EX04/: EX04_jonas_gstoettenmayr.html  EX04_jonas_gstoettenmayr.ipynb  code_classification_template.ipynb  faq.html
EX06/: EX06_jonas_gstoettenmayr.html  EX06_jonas_gstoettenmayr.ipynb  pyproject.toml
data/EX1_Pages/: test_page.html
