[project]
name = "exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bertopic>=0.17.4",
    "gensim>=4.4.0",
    "hdbscan>=0.8.42",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "notebook>=7.5.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "pyldavis>=3.4.1",
    "requests>=2.32.5",
    "sacremoses>=0.1.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "umap-learn>=0.5.12",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
