[project]
name = "EX06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.3.0",
    "ninja>=1.13.0",
    "packaging>=26.1",
    "torch==2.5.1",
    "transformers==4.49.0",
    #"flash_attn==2.7.4.post1",
    "pandas>=2.3.3",
    "jupyter>=1.1.1",
    "huggingface-hub[cli]>=0.36.2",
    "langchain>=1.2.15",
    "langchain-huggingface>=1.2.2",
    "pyarrow>=24.0.0",
    "datasets>=4.8.4",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.8",
]

#[tool.uv.extra-build-dependencies]
#flash-attn = ["torch"]
